--- a/build.xml
+++ b/build.xml
@@ -32,9 +32,14 @@
       <get src="http://repo1.maven.org/maven2/com/miglayout/miglayout-swing/4.2/miglayout-swing-4.2.jar" 
            dest="${lib}/miglayout-swing-4.2.jar" 
            skipexisting="true" />
+  	  <echo message="downloading Apache Commons IO to ${lib}"/>  	
       <get src="http://repo1.maven.org/maven2/commons-io/commons-io/2.4/commons-io-2.4.jar" 
          dest="${lib}/commons-io-2.4.jar" 
-         skipexisting="true" />  	  	
+         skipexisting="true" />
+      <echo message="downloading Trident animation library to ${lib}"/>     
+      <get src="http://repo1.maven.org/maven2/org/pushingpixels/trident/1.3/trident-1.3.jar" 
+         dest="${lib}/trident-1.3.jar" 
+         skipexisting="true" />  	 	
   </target>
 
   <!-- init - Create temporary directory to build the program -->
