--- a/build.xml
+++ b/build.xml
@@ -42,7 +42,7 @@
          skipexisting="true" />
       <echo message="downloading java json library to ${lib}"/>     
       <get src="http://repo1.maven.org/maven2/org/json/json/20140107/json-20140107.jar" 
-         dest="${lib}/json.jar" 
+         dest="${lib}/json-20140107.jar" 
          skipexisting="true" />
   </target>
 
@@ -77,7 +77,7 @@
       <manifest>
         <attribute name="Main-Class" value="magic.MagicMain" />
         <attribute name="SplashScreen-Image" value="magic/data/textures/logo.jpg" />
-        <attribute name="Class-Path" value="lib/groovy-all-${groovy-version}.jar lib/json.jar lib/miglayout-core-4.2.jar lib/miglayout-swing-4.2.jar lib/commons-io-2.4.jar lib/trident-1.3.jar" />
+        <attribute name="Class-Path" value="lib/groovy-all-${groovy-version}.jar lib/json-20140107.jar lib/miglayout-core-4.2.jar lib/miglayout-swing-4.2.jar lib/commons-io-2.4.jar lib/trident-1.3.jar" />
       </manifest>
     </jar>
   </target>
