--- a/build.xml
+++ b/build.xml
@@ -76,7 +76,7 @@
     <jar destfile="release/Magarena.jar" basedir="build" includes="**/*.*">
       <manifest>
         <attribute name="Main-Class" value="magic.MagicMain" />
-        <attribute name="SplashScreen-Image" value="magic/data/textures/logo.jpg" />
+        <attribute name="SplashScreen-Image" value="magic/data/textures/splash.png" />
         <attribute name="Class-Path" value="lib/groovy-all-${groovy-version}.jar lib/json-20140107.jar lib/miglayout-core-4.2.jar lib/miglayout-swing-4.2.jar lib/commons-io-2.4.jar lib/trident-1.3.jar" />
       </manifest>
     </jar>
