--- a/build.gradle
+++ b/build.gradle
@@ -21,14 +21,24 @@ repositories {
 }
 
 dependencies {
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:28.1-jre'
+    // These dependencies are used by the application.
+    implementation 'com.google.guava:guava:28.1-jre',
+    			   'org.codehaus.groovy:groovy-all:2.4.12',
+    			   'com.miglayout:miglayout-core:4.2',
+    	           'com.miglayout:miglayout-swing:4.2',
+    			   'commons-io:commons-io:2.4',
+    			   'org.pushingpixels:trident:1.3',
+    			   'org.json:json:20140107',
+    			   'com.h2database:h2:1.4.193',
+    			   'jakarta.activation:jakarta.activation-api:1.2.1'
 
     // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12',
+                       'org.hamcrest:hamcrest-core:1.3',
+                       'com.google.errorprone:error_prone_ant:2.0.19'
 }
 
 application {
     // Define the main class for the application.
-    mainClassName = 'magarena.App'
+    mainClassName = 'magic.MagicMain'
 }
